[package]
name = "distinct-kmers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
niffler = "3.0"
packed-seq = "1.0"
rayon = "1.10"
regex = "1.11"
rustc-hash = "2.1"
seq_io = "0.3"
seq_io_parallel = "0.2"
simd-minimizers = { git = "https://github.com/rust-seq/simd-minimizers.git", branch = "superkmers" }

[profile.release]
opt-level = 3
lto = "fat"
debug = true

[profile.dev]
opt-level = 1
lto = "thin"

[lints.clippy]
upper_case_acronyms = "allow"
